--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -1,7 +1,7 @@
 html,
 body {
-    background-color: #34495e;
-    color: #ecf0f1;
+    background-color: #ecf0f1;
+    color: #34495e;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
     height: 100vh;
